<resources>
    <string name="app_name">gama6</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">gama6</string>
    <string name="nav_header_subtitle">Mobile application</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Take a picture</string>
    <string name="menu_my_locations">My Locations</string>
    <string name="menu_post_a_message">Post a message</string>
    <string name="menu_add_location">Add location</string>
    <string name="menu_camera">Camera</string>

    <string name="post_a_message_text_input_layout_hint">Message…</string>
    <string name="post_a_message_text_input_layout_message_type_hint">Message type…</string>
    <string name="post_a_message_button_post_message">Send message</string>

    <string name="my_locations_add_button_desc">Add location</string>

    <string name="random_data_generation_range">Random data generation range</string>
    <string name="add_location_hint_min_value">Min…</string>
    <string name="add_location_hint_max_value">Max…</string>
    <string name="update_frequency">Update frequency(HH:MM:SS)</string>
    <string name="add_location_hint_location_name">Location…</string>
    <string name="add_location_button_add_location">Add location</string>
    <string name="add_location_switch_simulation">Simulation OFF / ON</string>
    <string name="add_location_speakable_text">Google Maps</string>
    <string name="add_location_save_location_button">Save location</string>

    <string name="recycle_view_item_title">Free Parking Spots</string>
    <string name="recycle_view_item_num_cars">(10)</string>
    <string name="recycle_view_item_range">From 0 to 10</string>
    <string name="recycle_view_item_update_frequency">Update frequency</string>
    <string name="recycle_view_item_location">Location</string>
    <string name="recycle_view_item_switch_on">ON</string>
    <string name="recycle_view_item_switch_off">OFF</string>

    <string name="take_a_picture_autocomplete_text_view_hint">Location…</string>
    <string name="take_a_picture_go_to_camera_button">Go to camera</string>

    <!-- array of message types -->
    <string-array name="message_types">
        <item>Information</item>
        <item>Warning</item>
        <item>Alert</item>
    </string-array>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>