<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@id/nav_my_locations">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.gama6mobileapp.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_my_locations"
        android:name="com.example.gama6mobileapp.ui.my_locations.MyLocationsFragment"
        android:label="@string/menu_my_locations"
        tools:layout="@layout/fragment_my_locations" />

    <fragment
        android:id="@+id/nav_post_a_message"
        android:name="com.example.gama6mobileapp.ui.post_a_message.PostAMessageFragment"
        android:label="@string/menu_post_a_message"
        tools:layout="@layout/fragment_post_a_message" />
</navigation>