<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="5dp"
    android:layout_marginStart="2dp"
    android:layout_marginEnd="2dp"
    app:cardBackgroundColor="@color/color_secondary"
    app:cardCornerRadius="10dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="5dp">

        <TextView
            android:id="@+id/rvTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/recycle_view_item_title"
            android:textColor="@color/color_onSecondary"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/rvRange"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="2dp"
            android:gravity="center"
            android:text="@string/recycle_view_item_range"
            android:textColor="@color/color_onSecondary"
            app:drawableStartCompat="@drawable/ic_range"
            app:layout_constraintStart_toStartOf="@id/rvTitle"
            app:layout_constraintTop_toBottomOf="@id/rvTitle" />

        <TextView
            android:id="@+id/rvUpdateFrequency"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="2dp"
            android:drawablePadding="2dp"
            android:gravity="center"
            android:text="@string/recycle_view_item_update_frequency"
            android:textColor="@color/color_onSecondary"
            app:drawableStartCompat="@drawable/ic_time"
            app:layout_constraintStart_toStartOf="@id/rvRange"
            app:layout_constraintTop_toBottomOf="@id/rvRange" />

        <TextView
            android:id="@+id/rvLocationName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="2dp"
            android:layout_marginBottom="2dp"
            android:gravity="center"
            android:text="@string/recycle_view_item_location"
            android:textColor="@color/color_onSecondary"
            app:drawableStartCompat="@drawable/ic_location"
            app:layout_constraintStart_toStartOf="@id/rvUpdateFrequency"
            app:layout_constraintTop_toBottomOf="@id/rvUpdateFrequency" />

        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/rvSimulationSwitch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:clickable="true"
            android:focusable="true"
            app:showText="true"
            android:thumb="@drawable/thumb_switch"
            app:track="@drawable/track_switch"
            android:textOff="@string/recycle_view_item_switch_off"
            android:textOn="@string/recycle_view_item_switch_on"
            app:switchTextAppearance="@style/TextAppearance.AppCompat.Subhead"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>

