<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.post_a_message.PostAMessageFragment">

    <TextView
        android:id="@+id/post_a_message_text_view_message_type"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="86dp"
        android:text="@string/post_a_message_text_input_layout_message_type_hint"
        app:layout_constraintStart_toStartOf="@+id/guideline"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/post_a_message_text_input_layout_message_type"
        android:layout_width="0dp"
        android:layout_height="55dp"
        android:layout_marginTop="1dp"
        app:layout_constraintBottom_toTopOf="@+id/post_a_message_text_input_layout_message"
        app:layout_constraintEnd_toStartOf="@+id/guideline2"
        app:layout_constraintStart_toStartOf="@+id/guideline"
        app:layout_constraintTop_toBottomOf="@id/post_a_message_text_view_message_type">

        <Spinner
            android:id="@+id/post_a_message_spinner_message_type"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:entries="@array/message_types"
            android:gravity="center_vertical" />
    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/post_a_message_text_input_layout_message"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        app:layout_constraintEnd_toStartOf="@+id/guideline2"
        app:layout_constraintStart_toStartOf="@+id/guideline"
        app:layout_constraintTop_toBottomOf="@id/post_a_message_text_input_layout_message_type">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/post_a_message_text_input_edit_text_message"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/color_surface"
            android:hint="@string/post_a_message_text_input_layout_hint"
            android:inputType="text" />
    </com.google.android.material.textfield.TextInputLayout>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.1" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.9" />

    <Button
        android:id="@+id/post_a_message_button_post_message"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/post_a_message_button_post_message"
        app:layout_constraintEnd_toStartOf="@+id/guideline2"
        app:layout_constraintTop_toBottomOf="@id/post_a_message_text_input_layout_message" />
</androidx.constraintlayout.widget.ConstraintLayout>